# Exeon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: README.md
.github/workflows/: cmake-single-platform.yml
include/ImGuizmo/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
lib/: assimp-vc143-mt.lib
src/: CMakeLists.txt  icon.rc  main.cpp  resource.h
src/Managed/: CMakeLists.txt  Console.cs  ExeonScript.cs  ExeonScript.csproj
src/Managed/GameObject/: GameObject.cs
src/Managed/Math/: Transform.cs  Vector3.cs
src/Managed/Scene/: Scene.cs  SceneManager.cs
src/Shader/: GBufferPass.hlsl  LightPass.hlsl  Shader.hlsl  SkyboxPass.hlsl
src/private/Core/: Core.cpp  SceneManager.cpp  Time.cpp
src/private/Core/Editor/: Console.cpp  Editor.cpp
src/private/Core/Editor/Fonts/: Roboto.cpp
src/private/Core/GameObject/: GameObject.cpp
src/private/Core/GameObject/Camera/: Camera.cpp  EditorCamera.cpp
src/private/Core/GameObject/Component/: Component.cpp  Mesh.cpp
src/private/Core/GameObject/Components/: Component.cpp
src/private/Core/Input/: Input.cpp
src/private/Core/Renderer/: D3D12.cpp  DescriptorHeap.cpp  Renderer.cpp  ResourceManager.cpp  ScreenQuad.cpp  Shader.cpp
src/private/Core/Scene/: Scene.cpp  SceneManager.cpp
src/private/Math/: Transform.cpp  Vector3.cpp
src/private/Runtime/: ConsoleImpl.cpp  GameObjectImpl.cpp  MonoScript.cpp  SceneImpl.cpp
src/private/Subsystem/: Discord.cpp
src/public/: Util.h
src/public/Core/: Core.h  SceneManager.h  Time.h
src/public/Core/Editor/: Console.h  Editor.h
src/public/Core/Editor/Fonts/: Roboto.h
src/public/Core/GameObject/: GameObject.h
src/public/Core/GameObject/Camera/: Camera.h  EditorCamera.h
src/public/Core/GameObject/Component/: Component.h  Mesh.h
src/public/Core/GameObject/Components/: Component.h
src/public/Core/Input/: Input.h
src/public/Core/Renderer/: D3D12.h  Descriptor.h  DescriptorHeap.h  Renderer.h  ResourceManager.h  ScreenQuad.h  Shader.h
src/public/Core/Scene/: Scene.h  SceneManager.h
src/public/Math/: Transform.h  Vector3.h
src/public/Runtime/: ConsoleImpl.h  GameObjectImpl.h  MonoScript.h  SceneImpl.h
src/public/Subsystem/: Discord.h
